logs/Slang/generated/hdlconv/hdlconvertor_p199.sv.log
name: hdlconvertor_p199
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p199.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p199.sv:1:1: error: language feature not yet supported
interface class IntfBase1;
^~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p199.sv:5:1: error: language feature not yet supported
interface class IntfBase2;
^~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p199.sv:9:1: error: language feature not yet supported
virtual class ClassBase;
^~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p199.sv:13:1: error: language feature not yet supported
class ClassExt extends ClassBase implements IntfBase1, IntfBase2;
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
